fix: blocks in white - invisible with white background (#14)

--- a/pandoc.css
+++ b/pandoc.css
@@ -122,7 +122,6 @@ hr {
 }
 
 pre, code, kbd, samp {
-  color: #fff;
   font-family: monospace, monospace;
   _font-family: 'courier new', monospace;
   font-size: 0.98em;
